[package]
name = "outbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
dotenv = "0.15.0"
rand = "0.8.5"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "mysql"] }
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1.37"
